# urban-drainage-stress

./: .gitignore  COMPLETE_DOCUMENTATION.md  KAGGLE_INSTRUCTIONS.md  README.md  cross_country_transfer.py  dashboard.py  pyproject.toml  requirements.txt  run_complete_system.py  run_full_analysis.py
checkpoints/: st_gnn_best.pt  st_gnn_best_optimized.pt  st_gnn_final.pt
config/: ml_config.yaml  roi_config.yaml
data/: README.md  ml_dataset_summary.json  registry.json
data/registry/: datasets.yaml  rainfall_sources.yaml  registry.yaml
data/run_reports/: final_status_20260109_185815.txt  final_status_20260109_190143.txt  final_status_20260109_191728.txt  final_status_20260109_192424.txt  final_status_20260109_192437.txt  final_status_20260109_193610.txt  final_status_20260109_193848.txt  final_status_20260109_194051.txt  final_status_20260109_194357.txt  final_status_20260109_200734.txt  final_status_20260109_200758.txt  final_status_20260109_201007.txt  (+65 more)
reports/: auto_hyperparameter_report.md  cross_country_transfer_report.md  hyperparameter_optimization.md  ml_execution_report.md  real_data_training_report.md
results/: ablation_metrics.json  capacity_scaling_results.json  final_training_summary.json  loss_weight_results.json  regularization_results.json  temporal_depth_results.json
scripts/: hyperparameter_optimization.py  plot_optimization_results.py  prepare_kaggle_bundle.py  run_ml_pipeline.py  test_latent_architecture.py  train_latent_model.py  train_real_data.py  viz_real_data.py
src/: main.py
src/config/: roi.py  (+3 more)
tests/: test_universal_deployment.py
(+128 files in other folders)
